--- a/config/config.yml
+++ b/config/config.yml
@@ -1,8 +1,12 @@
 development:
-  perform_authentication: false
+  perform_authentication: true
+  user: user
+  password: pass
 
 test:
   perform_authentication: false
 
 production:
   perform_authentication: true
+  user: user
+  password: pass
